--- a/styles/global.css
+++ b/styles/global.css
@@ -1,27 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Baloo+2:wght@400;500;600;700;800&display=swap");
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  line-height: 1.6;
-  font-size: 18px;
+  font-family: "Arimo", sans-serif;
+  font-size: 62.5%;
 }
-
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
-
 a {
   color: #0070f3;
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
 img {
   max-width: 100%;
   display: block;
+}
+li {
+  list-style: none;
+}
+.material-icons {
+  vertical-align: -6px;
+  margin-left: 1rem;
 }
