--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -7,19 +7,41 @@
 }
 
 .headingXl {
-  font-size: 2rem;
-  line-height: 1.3;
+  font-size: 6.4rem;
   font-weight: 800;
-  letter-spacing: -0.05rem;
-  margin: 1rem 0;
+  font-family: "Baloo 2", sans-serif;
+  text-align: center;
+  line-height: 0.75;
 }
 
 .headingLg {
-  font-size: 1.5rem;
-  line-height: 1.4;
-  margin: 1rem 0;
+  padding-top: 12rem;
+  font-size: 2.4rem;
+  font-weight: 800;
+  font-family: "Arimo", sans-serif;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  text-align: center;
 }
 
+.line {
+  height: 4px;
+  width: 200px;
+  margin: 2rem auto 5rem;
+}
+
+.textRed {
+  color: #ff0000;
+}
+.textPurple {
+  color: #5456a9;
+}
+.textGreen {
+  color: #42a644;
+}
+.textBlue {
+  color: #0190de;
+}
 .headingMd {
   font-size: 1.2rem;
   line-height: 1.5;
